# 2025_ptz_cam_control

./: README.md
ptz_playground/: package.xml  setup.cfg  setup.py
ptz_playground/ptz_playground/: 2d_to_pan_tilt_controller.py  howto?  pan_tilt_controller.py
ptz_urdf/: CMakeLists.txt  package.xml
ptz_urdf/config/: controllers.yaml  pan_tilt_control.yaml
ptz_urdf/launch/: gazebo_pan_tilt.launch.py  howtouse?  model.launch.py  pan_tilt_gazebo_control.launch.py
ptz_urdf/rviz/: pan_tilt.rviz
ptz_urdf/urdf/: pan_tilt.urdf  pan_tilt.xacro
