<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ptz_urdf</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="chani@todo.todo">chani</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
 <!-- <build_depend>xacro</build_depend> -->
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>urdf</depend>
  <depend>rviz2</depend>
  <depend>xacro</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- <exec_depend>xacro</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
